# coinche-server-rs

./: .gitignore  Cargo.toml  Procfile  app.json  package.json  tsconfig.json  tslint.json
front/ts/: Game.ts  Vue.ts  communications.ts  main.ts
src/: game.rs  junk.rs  lib.rs  logging.rs  main.rs  messages.rs  player.rs  rcs.rs  server.rs  static_files.rs  websocket.rs
src/cards/: bid.rs  card.rs  deck.rs  mod.rs  points.rs  trump.rs
src/game/: mod.rs  points.rs
src/game/cards/: card.rs  deck.rs  mod.rs
src/game/contract/: bid.rs  mod.rs
src/player/: actions.rs  mod.rs
src/server/: game.rs  mod.rs  websocket.rs
static/: index.html  table.css  table.html
static/js/: Game.js  Vue.js  communications.js  main.js
tests/: client.rs
