[package]
name = "coinche"
version = "0.1.0"
authors = ["Thomas BESSOU <thomas.bessou@hotmail.fr>"]
edition = "2018"
publish = false

[profile]
# Preserve line numbers in release
release = { debug = 1 }

[dependencies]
actix-files = "0.1.6"
actix = "0.8.3"
actix-rt = "0.2.5"
actix-web = "1.0.8"
actix-web-actors = "1.0.2"
chrono = "0.4.9"
ctrlc = "3.1.3"
derive_deref = "1.1.0"
failure = "0.1.6"
fern = { version = "0.5.8", features = ['colored'] }
futures = "0.1.29"
log = "0.4.8"
rand = "0.7.2"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.41"

[dev-dependencies]
ws = "0.9.1"
