[package]
name = "coinche"
version = "0.1.0"
authors = ["Thomas BESSOU <thomas.bessou@hotmail.fr>"]
edition = "2018"
publish = false

[profile]
# Preserve line numbers in release
release = { debug = 1 }

[dependencies]
actix = "0.8"
actix-files = "0.1"
actix-rt = "0.2"
actix-web = "1"
actix-web-actors = "1"
chrono = "0.4"
ctrlc = { version = "3", features = ['termination'] }
failure = "0.1"
fern = { version = "0.5", features = ['colored'] }
futures = "0.1"
log = "0.4"
rand = "0.7"
serde = "1"
serde_derive = "1"
serde_json = "1"
