[package]
name = "coinche"
version = "0.1.0"
authors = ["Thomas BESSOU <thomas.bessou@hotmail.fr>"]
edition = "2021"
publish = false

[profile]
# Preserve line numbers in release
release = { debug = 1 }

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-rt = "2"
actix-web = "4"
actix-web-actors = "4"
chrono = "0.4"
failure = "0.1"
fern = { version = "0.6", features = ['colored'] }
futures = "0.3"
log = "0.4"
rand = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
